--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Anthony Nixon</title>
+    <title>Anthony Niximacco</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/df88468b70.js" crossorigin="anonymous"></script>
     <link rel="icon" href="assets/images/favicon.ico?v=2" type="image/x-icon" />
@@ -22,14 +22,14 @@
 
 <body>
     <div id="profile">
-        <img id="userPhoto" src="assets/images/profile.png" alt="Profile picture of Anthony Nixon">
+        <img id="userPhoto" src="assets/images/profile.png" alt="Profile picture of Anthony Niximacco">
         <div id="userName">
-            <h1>Anthony Nixon</h1>
+            <h1>Anthony Niximacco</h1>
             <p>Minnesota, USA</p>
         </div>
     </div>
     <div id="links">
-	<a rel="me" href="https://mn.social/@AnthonyNixon" class="link" target="_blank"><i class="fa-brands fa-mastodon"></i> Mastodon</a>
+	<a rel="me" href="https://mn.social/@Niximacco" class="link" target="_blank"><i class="fa-brands fa-mastodon"></i> Mastodon</a>
 	<a class="link" href="https://twitter.com/AnthonyNixon" target="_blank"><i class="fa-brands fa-twitter"></i> Twitter</a>
         <a class="link" href="https://github.com/AnthonyNixon" target="_blank"><i class="fa fa-github"></i> Github</a>
         <a class="link" href="https://www.linkedin.com/in/nixon-anthony/" target="_blank"><i class="fa fa-linkedin"
